--- a/.travis.yaml
+++ b/.travis.yaml
@@ -8,7 +8,7 @@ before_install:
     - docker build -t jaonhawthorne/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run jasonhawthorne/react-test npm test -- --coverage
+    - docker run -e CI=true jasonhawthorne/react-test npm test
 
 # build production apps
 after_success:
