--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,23 @@ services:
 
     # to run tests we need to use the dev dockerfile
 before_install:
-    - docker build -t jasonhawthorne/react-test -f ./client/Dockerfile.dev ./client
+    - docker build -t jhawthor/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run -e CI=true jasonhawthorne/react-test npm test
+    - docker run -e CI=true jhawthor/react-test npm test
 
 # build production apps
 after_success:
-    - docker build -t jasonhawthorne/multi-client ./client
-    - docker build -t jasonhawthorne/multi-nginx ./nginx
-    - docker build -t jasonhawthorne/multi-server ./server
-    - docker build -t jasonhawthorne/multi-worker ./worker
+    - docker build -t jhawthor/multi-client ./client
+    - docker build -t jhawthor/multi-nginx ./nginx
+    - docker build -t jhawthor/multi-server ./server
+    - docker build -t jhawthor/multi-worker ./worker
 
 # Log into to docker repo
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
 # push images to dockerhub (or a local docker repo)
-- docker push jasonhawthorne/multi-client
-- docker push jasonhawthorne/multi-nginx
-- docker push jasonhawthorne/multi-server
-- docker push jasonhawthorne/multi-worker
+- docker push jhawthor/multi-client
+- docker push jhawthor/multi-nginx
+- docker push jhawthor/multi-server
+- docker push jhawthor/multi-worker
