--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
     # using docker
@@ -8,7 +9,7 @@ before_install:
     - docker build -t jhawthor/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run -e CI=true jhawthor/react-test npm test
+    - docker run -e CI=true docker-react npm run test -- --coverage
 
 # build production apps
 after_success:
