--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-
+language: generic
+sudo: required
 services:
     - docker
-before_install:
+ before_install:
     - docker build -t jhawthor/react-test -f ./client/Dockerfile.dev ./client
 script:
     - docker run -e CI=true docker-react npm run test -- --coverage
