--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language : generic
+language: generic
 sudo : required
-services :
+
+services:
     - docker
-before_install :
+
+before_install:
     - docker build -t jhawthor/react-test -f ./client/Dockerfile.dev ./client
+
 script:
     - docker run -e CI=true jhawthor/react-test npm run test -- --coverage
 
@@ -12,8 +16,10 @@ after_success:
     - docker build -t jhawthor/multi-nginx ./nginx
     - docker build -t jhawthor/multi-server ./server
     - docker build -t jhawthor/multi-worker ./worker
+
     # Log into to docker repo
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
     # push images to dockerhub (or a local docker repo)
     - docker push jhawthor/multi-client
     - docker push jhawthor/multi-nginx
