travis file update final5

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
     - docker build -t jhawthor/multi-worker ./worker
 
     # Log into to docker repo
-    - echo '$DOCKER_PASSWORD' | docker login -u '$DOCKER_ID' --password-stdin
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
     # push images to dockerhub
     - docker push jhawthor/multi-client
