--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
     - docker build -t jhawthor/multi-worker ./worker
 
     # Log into to docker repo
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin hub.docker.com
 
     # push images to dockerhub
     - docker push jhawthor/multi-client
