--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,17 @@ after_success:
     - docker push jhawthor/multi-nginx
     - docker push jhawthor/multi-server
     - docker push jhawthor/multi-worker
+
+deploy:
+    edge: true
+    provider: elasticbeanstal
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-001398512245
+    bucket_path: docker-multi
+    on: 
+       branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: 
+        secure: $AWS_SECRET_KEY
