--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ after_success:
 
 deploy:
     edge: true
-    provider: elasticbeanstal
+    provider: elasticbeanstalk
     region: us-east-2
     app: multi-docker
     env: MultiDocker-env
